k8s/ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingressian
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path:
            backend:
              serviceName: kafka-bootstrap
              servicePort: 9092
          - path:
            backend:
              serviceName: kafka-0-internal
              servicePort: 9092
